src/components/Chart/timespan.scss
@import "~pc-nrfconnect-shared/src/variables";
@import "./chart.scss";

.timespan {
    margin-left: $yAxisWidthPx;
    height: 1.5rem;
    position: relative;
    overflow: hidden;

    .span {
        line-height: 1.5rem;
        text-align: center;
        font-size: 8pt;
        position: absolute;
        border-style: solid;
        border-color: $gray-100;
        border-width: 0 1px;
        .value {
            padding: 0 0.5rem;
            background-color: $white;
            z-index: 1;
            width: fit-content;
            margin: auto;
            position: relative;
        }
    }
    .span::after {
        content: '';
        top: 50%;
        border-top: 1px solid $gray-100;
        display: block;
        position: absolute;
        width: 100%;
    }

    .cursor {
        top: 0;
        bottom: 0;
        width: 11px;
        background-color: $gray-600;
        border-radius: 2px;
        margin-left: -5px;
        cursor: grab;
        z-index: 2;
        position: absolute;

        &::after {
            content: '\2261';
            color: $gray-50;
            font-size: 17px;
            position: absolute;
            top: -2px;
            left: 0.5px;
        }
    }
}

.timespan.window {
    height: 1rem;
    .span {
        line-height: 1rem;
    }
}

